--- a/about.html
+++ b/about.html
@@ -870,9 +870,9 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<span class="nav-dropdown-header">10. Normal distributions</span>
-<span class="nav-dropdown-header">11. CLT</span>
-<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <span class="nav-dropdown-header">13. Continuous relationships</span>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
@@ -947,9 +947,15 @@ Lectures
     <li>
       <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
     </li>
-    <li class="dropdown-header">10. Normal distributions</li>
-    <li class="dropdown-header">11. CLT</li>
-    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
+    </li>
     <li class="dropdown-header">13. Continuous relationships</li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
