--- a/assignments.html
+++ b/assignments.html
@@ -946,9 +946,9 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<span class="nav-dropdown-header">10. Normal distributions</span>
-<span class="nav-dropdown-header">11. CLT</span>
-<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <span class="nav-dropdown-header">13. Continuous relationships</span>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
@@ -1023,9 +1023,15 @@ Lectures
     <li>
       <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
     </li>
-    <li class="dropdown-header">10. Normal distributions</li>
-    <li class="dropdown-header">11. CLT</li>
-    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
+    </li>
     <li class="dropdown-header">13. Continuous relationships</li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
@@ -1148,8 +1154,8 @@ class="math inline">\(t\)</span>-tests</p>
 class="math inline">\(t\)</span>-test</p></li>
 </ul>
 <p>Deadline: November 9, 9:00am</p>
-<p>Download:
-<!-- [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv) --></p>
+<p>Download: <a href="./assignments/assignment03.html">html file</a> |
+<a href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key:
 <!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) --></p>
 </div>
