--- a/schedule.html
+++ b/schedule.html
@@ -946,9 +946,9 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<span class="nav-dropdown-header">10. Normal distributions</span>
-<span class="nav-dropdown-header">11. CLT</span>
-<span class="nav-dropdown-header">12. Z- and t-tests</span>
+<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <span class="nav-dropdown-header">13. Continuous relationships</span>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
@@ -1023,9 +1023,15 @@ Lectures
     <li>
       <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
     </li>
-    <li class="dropdown-header">10. Normal distributions</li>
-    <li class="dropdown-header">11. CLT</li>
-    <li class="dropdown-header">12. Z- and t-tests</li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
+    </li>
     <li class="dropdown-header">13. Continuous relationships</li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
@@ -1246,8 +1252,10 @@ href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
 href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
 <li><p>Class 9 (10/24) slides: <a
 href="./slides/EDUC641_9_transformations.html">html</a> | <a
-href="./slides/EDUC641_9_transformations.pdf">pdf</a>
-<!-- - Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) --></p></li>
+href="./slides/EDUC641_9_transformations.pdf">pdf</a></p></li>
+<li><p>Classes 10-12 (10/26, 10/31, &amp; 11/2) slides: <a
+href="./slides/EDUC641_10_inference.html">html</a> | <a
+href="./slides/EDUC641_10_inference.pdf">pdf</a></p></li>
 <li><p>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
 href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
@@ -1259,8 +1267,8 @@ lab</a></p></li>
 <p>Assignment 3:</p>
 <ul>
 <li>Due: November 9, 11:59p</li>
-<li><!-- [html file](./assignments/assignment03.html)
-- [cont.csv dataset](./data/cont.csv) --></li>
+<li><a href="./assignments/assignment03.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-4" class="section level2">
