--- a/slides/EDUC641_10_inference.html
+++ b/slides/EDUC641_10_inference.html
@@ -247,7 +247,7 @@ $$ z = \frac{76-71.64}{8.15} = 0.535$$
 ---
 # You try...answered!
 
-The proportion of the area under the curve above a z-score of 0.53 is just under 0.30 ($\approx 0.296). Therefore, there is a 30 percent probability of randomly selecting a country with a national life expectancy greater than 76.
+The proportion of the area under the curve above a z-score of 0.53 is just under 0.30 ( `\(\approx\)` 0.296). Therefore, there is a 30 percent probability of randomly selecting a country with a national life expectancy greater than 76.
 
 &lt;img src="EDUC641_10_inference_files/figure-html/unnamed-chunk-14-1.png" style="display: block; margin: auto;" /&gt;
 
