post Week 6 lab

--- a/schedule.html
+++ b/schedule.html
@@ -1261,8 +1261,8 @@ href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
 href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
 <li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> |
 <a href="./slides/EDUC641_9_code.R">Class 9 script</a></p></li>
-<li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5
-lab</a></p></li>
+<li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a> | <a
+href="./labs/Lab6.docx">Week 6 lab</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
@@ -1304,8 +1304,9 @@ Chapter 15.1 and 15.2</a></li>
 conference)</strong></li>
 </ul></li>
 <li>Class 14 (11/14) slides:
-<!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
+<!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf) --></li>
+<li>Class 15-16 slides (11/16 &amp; 11/21):
+<!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
 <ul>
 <li><strong>No class on 11/23 (university holiday)</strong></li>
 </ul></li>
