--- a/schedule.html
+++ b/schedule.html
@@ -949,7 +949,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<span class="nav-dropdown-header">13. Continuous relationships</span>
+<a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
@@ -1032,7 +1032,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
-    <li class="dropdown-header">13. Continuous relationships</li>
+    <li>
+      <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
+    </li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
@@ -1297,8 +1299,9 @@ Chapter 15.1 and 15.2</a></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Class 13 (11/7) slides:
-<!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
+<li>Class 13 (11/7) slides: <a
+href="./slides/EDUC641_13_continuousrel.html">html</a> | <a
+href="./slides/EDUC641_13_continuousrel.pdf">pdf</a>
 <ul>
 <li><strong>No class on 11/9 (David traveling for
 conference)</strong></li>
@@ -1310,15 +1313,15 @@ conference)</strong></li>
 <ul>
 <li><strong>No class on 11/23 (university holiday)</strong></li>
 </ul></li>
+<li>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
+<li>R code: <a href="./slides/EDUC641_14_code.R">R script</a></li>
 </ul>
-<!--
-- Data:  [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R script](./slides/EDUC641_14_code.R) -->
 <p>Assignment 4:</p>
 <ul>
-<li>Due Nov. 27, 11:59pm <!--
- - [html file](./assignments/assignment04.html)
- - [cont.csv](./data/cont.csv) --></li>
+<li>Due Nov. 27, 11:59pm</li>
+<li><a href="./assignments/assignment04.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv</a></li>
 </ul>
 </div>
 <div id="unit-5" class="section level2">
