--- a/syllabus.html
+++ b/syllabus.html
@@ -949,7 +949,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<span class="nav-dropdown-header">13. Continuous relationships</span>
+<a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
@@ -1032,7 +1032,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
-    <li class="dropdown-header">13. Continuous relationships</li>
+    <li>
+      <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
+    </li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
