--- a/schedule.html
+++ b/schedule.html
@@ -1264,7 +1264,8 @@ href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
 <li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> |
 <a href="./slides/EDUC641_9_code.R">Class 9 script</a></p></li>
 <li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a> | <a
-href="./labs/Lab6.docx">Week 6 lab</a></p></li>
+href="./labs/Lab6.docx">Week 6 lab</a> | <a href="./labs/Lab7.docx">Week
+6 lab</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
