class 14 launch and assignment 3 keys

--- a/assignments.html
+++ b/assignments.html
@@ -950,7 +950,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -1035,7 +1035,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
     <li class="dropdown-header">17. NHST critiques</li>
@@ -1158,8 +1160,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <p>Deadline: November 9, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key:
-<!-- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) --></p>
+<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment03_key.R">R script</a></p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
