--- a/schedule.html
+++ b/schedule.html
@@ -950,7 +950,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -1035,7 +1035,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
     <li class="dropdown-header">17. NHST critiques</li>
@@ -1295,8 +1297,9 @@ bivariate regression model</li>
 </ul>
 <p>Readings:</p>
 <ul>
-<li><a href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR
-Chapter 15.1 and 15.2</a></li>
+<li>Complete <strong>prior to Nov. 21</strong> class: <a
+href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter 15.1
+and 15.2</a></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
@@ -1307,8 +1310,9 @@ href="./slides/EDUC641_13_continuousrel.pdf">pdf</a>
 <li><strong>No class on 11/9 (David traveling for
 conference)</strong></li>
 </ul></li>
-<li>Class 14 (11/14) slides:
-<!-- [html](./slides/EDUC641_15_regression.html) | [pdf](./slides/EDUC641_15_regression.pdf) --></li>
+<li>Class 14 (11/14) slides: <a
+href="./slides/EDUC641_14_regression.html">html</a> | <a
+href="./slides/EDUC641_14_regression.pdf">pdf</a></li>
 <li>Class 15-16 slides (11/16 &amp; 11/21):
 <!-- [html](./slides/EDUC641_16_residuals.html) | [pdf](./slides/EDUC641_16_residuals.pdf) -->
 <ul>
