--- a/data_management.html
+++ b/data_management.html
@@ -877,7 +877,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -962,7 +962,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
     <li class="dropdown-header">17. NHST critiques</li>
